fix(filter): CSS modifications on the overflow of the filters to always have the tilte at the top

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -16,8 +16,8 @@
       height: 100%;
       width: 100%;
       font-size: 1rem;
-      overflow-y: auto;
-      scrollbar-width: none;
+      overflow: hidden;
+
       transition: max-height 0.3s ease;
 
       &.open {
@@ -42,64 +42,69 @@
         }
       }
 
-      .filtre-searching {
-        padding: 0 10%;
-        height: 56px;
+      .filtre-elements-section {
+        overflow-y: scroll;
+        scrollbar-width: none;
+        height: 100%;
+        .filtre-searching {
+          padding: 0 10%;
+          height: 56px;
 
-        .filtre-searchbar {
-          display: flex;
-          border-radius: 2px;
-          border: solid 1px variables.$light-grey;
-          padding: 5%;
-          height: 2.25rem;
+          .filtre-searchbar {
+            display: flex;
+            border-radius: 2px;
+            border: solid 1px variables.$light-grey;
+            padding: 5%;
+            height: 2.25rem;
 
-          input {
-            width: 100%;
-            caret-color: variables.$light-grey;
-          }
+            input {
+              width: 100%;
+              caret-color: variables.$light-grey;
+            }
 
-          svg {
-            height: fit-content;
-            width: 0.875rem;
-          }
-        }
-      }
-
-      .selected-elements {
-        margin-bottom: 20px;
-        div {
-          background-color: variables.$yellow;
-          padding: 5%;
-          font-size: 0.875rem;
-          display: flex;
-          justify-content: space-between;
-
-          .unselect-filter-element {
-            display: none;
-          }
-
-          &:hover {
-            font-weight: 700;
-
-            .unselect-filter-element {
-              display: block;
-              width: 17px;
+            svg {
+              height: fit-content;
+              width: 0.875rem;
             }
           }
         }
-      }
 
-      .filtre-elements {
-        div {
-          padding: 5%;
-          font-size: 0.875rem;
-
-          .unselect-filter-element {
-            display: none;
-          }
-
-          &:hover {
+        .selected-elements {
+          margin-bottom: 20px;
+          div {
             background-color: variables.$yellow;
+            padding: 5%;
+            font-size: 0.875rem;
+            display: flex;
+            justify-content: space-between;
+
+            .unselect-filter-element {
+              display: none;
+            }
+
+            &:hover {
+              font-weight: 700;
+
+              .unselect-filter-element {
+                display: block;
+                width: 17px;
+              }
+            }
+          }
+        }
+
+        .filtre-elements {
+          div {
+            padding: 5%;
+            font-size: 0.875rem;
+
+            .unselect-filter-element {
+              display: none;
+            }
+
+            &:hover {
+              background-color: variables.$yellow;
+            }
           }
         }
       }
